--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ANINDO</title>
+	<title>Module 2 Coding Assignment</title>
 	<link ref="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -31,6 +31,5 @@
 				</article>
 			</div>
 		</div>
-</div>
 </body>
 </html>
