--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Assignment Solution for module 2</title>
+	<title>Module 2 Coding Assignment</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
