--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Module 2 Coding Assignment</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -10,7 +11,7 @@
 
 <div id="row">
 
-	<div class="col-lg-4 col-md-6" >
+	<div class="col-lg-4 col-md-6 col-sm-12" >
 		<div class="section" id="section1">
 			<div id="chicken" class="title">Chicken</div>
 			<article>
@@ -18,7 +19,7 @@
 			</article>
 		</div>
 	</div>
-	<div class="col-lg-4 col-md-6" >
+	<div class="col-lg-4 col-md-6 col-sm-12" >
 		<div class="section" id="section2">
 			<div id="beef" class="title">Beef</div>
 			<article>
@@ -26,7 +27,7 @@
 			</article>
 		</div>
 	</div>
-	<div class="col-lg-4 col-md-12" >
+	<div class="col-lg-4 col-md-12 col-sm-12" >
 		<div class="section" id="section3">
 			<div id="sushi" class="title">Sushi</div>
 			<article>
