--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="navbar-header">
         
-        <a class="navbar-brand" href="#"><h1>Food, LLC</h1></a>
+        <a class="navbar-brand" href="https://tanviranindo.github.io/HTML-CSS-JAVASCRIPT/module3-solution/"><h1>Food, LLC</h1></a>
 
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
